--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "20": "^3.1.9",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
+    "c-kzg": "^4.0.0-alpha.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "viem": "^2.9.28"
