update: knapsack algo for batching

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "c-kzg": "^4.0.0-alpha.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "viem": "^2.9.28"
+    "socket.io": "^4.7.5",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "viem": "^2.9.28",
+    "ws": "^8.17.0"
   }
 }
